--- a/psycstudio/package.json
+++ b/psycstudio/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "^15.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "jquery": "3.6.3",
+    "bootstrap": "5.2.3",
+    "angular-froala-wysiwyg": "4.0.17",
+    "angular-file-uploader": "7.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.0",
